name:                config-app
version:             0.1.0.0
synopsis:            Interactive configuration parsing
homepage:            galois.com
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          eric.mertens@galois.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable config-app
  main-is:             Main.hs
  build-depends:       base
                     , config-schema
                     , config-value
                     , ghcjs-base
                     , semigroupoids
                     , semigroups
                     , text
  default-language:    Haskell2010
