cabal-version:       2.4
name:                config-app
version:             0.1.0.0
synopsis:            Interactive configuration parsing
homepage:            galois.com
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eric Mertens
maintainer:          eric.mertens@galois.com
category:            Web
build-type:          Custom
extra-source-files:  ChangeLog.md

custom-setup
  setup-depends : base, Cabal, cabal-macosx

executable config-app-wkwebview
  main-is:             WebKit.hs
  build-depends:       base, data-default, config-app, jsaddle-wkwebview ^>=0.9.6.0,
  if impl(ghcjs)
    buildable: False
  ghc-options: -threaded
  default-language:    Haskell2010

executable config-app-js
  main-is:             GhcJs.hs
  build-depends:       base, config-app
  if !impl(ghcjs)
    buildable: False
  default-language:    Haskell2010

library
  exposed-modules:   ConfigApp
  hs-source-dirs:    lib
  build-depends:
    base >=4.8 && <4.14,
    config-schema ^>=1.2.0.0,
    config-value  ^>=0.7.0.0,
    ghcjs-dom ^>=0.9.4.0,
    semigroupoids,
    semigroups,
    pretty-show,
    text,
    transformers ^>= 0.5,
  default-language:    Haskell2010
